--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-API_KEY=t8UogM09EpZ1GUbqQDeUXieFtle42Ozo
-FRONT_URL=https://localhost:3000
+NEXT_PUBLIC_API_KEY=iuYCVmM4ZGDOtDK6NbonD2qmDrYAsDHm
+NEXT_PUBLIC_FRONT_LOCAL_URL=https://localhost:3000
+NEXT_PUBLIC_FRONT_PRODUCTION_URL=https://asaf-marom-21-08-2022.vercel.app
